--- a/README
+++ b/README
@@ -1,2 +1,11 @@
 Advertising Module
 
+A basic advertising module with cms module. Looks for the advert type based on the field you pass in to the call:
+
+<?=partial("ad/mpu", array("advert_type"=>"mpu"))?>
+
+will look for an advert of type mpu and a view called mpu. You could use:
+
+<?=partial("ad/all", array("advert_type"=>"mpu"))?>
+
+and it will still look for an mpu type, but the view will be all.html instead of mpu.html.
